kubernetes/nextcloud/overlays/k3s/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirect
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
spec:
  redirectScheme:
    scheme: https
    permanent: true
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: nextcloud
  labels:
    app.kubernetes.io/instance: nextcloud
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`nextcloud.<path:secret/data/homelab/domain#url>`)
      kind: Rule
      services:
        - name: nextcloud
          port: 443
      middlewares:
        - name: https-redirect
  tls:
    domains:
      - main: nextcloud.<path:secret/data/homelab/domain#url>
